Fixed alignment of sponsor cards and Ares name for mobile screen

--- a/sponsor.css
+++ b/sponsor.css
@@ -190,11 +190,11 @@ figure.snip0026 {
 }
 
 figure.snip0026 h2 {
-  font-size: 1.1em;
+  font-size: 0.9em;
 }
 
 figure.snip0026 h2 span {
-  font-weight: 800;
+  font-weight: 750;
   font-size: 0.5 em;
   
   /* width: 100%; */
